# everything.rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
