[package]
name = "everything2"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A port of everything to Rust"
homepage = "https://github.com/ysthakur/everything.rs"
repository = "https://github.com/ysthakur/everything.rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exec = "0.3.1"

